--- a/NewsAPI/package.json
+++ b/NewsAPI/package.json
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2",
     "newsapi": "^2.4.1",
+    "node-cache": "^5.1.2",
+    "node-schedule": "^2.1.1",
     "nodemon": "^3.0.1",
     "url-search-params": "^1.1.0"
   }
